// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders status details of failed transaction 1`] = `
Array [
  <div
    className="Col"
  >
    <div
      className="Detail"
      style={
        Object {
          "color": "#ffffff",
        }
      }
    >
      <div
        className="label"
      >
        Error code
      </div>
      <div
        className="value"
      >
        aSection.aName
      </div>
    </div>
  </div>,
  <div
    className="Col"
  >
    <div
      className="Detail"
      style={
        Object {
          "color": "#ffffff",
        }
      }
    >
      <div
        className="label"
      >
        Description
      </div>
      <div
        className="value"
      >
        someDetails
      </div>
    </div>
  </div>,
]
`;

exports[`renders status details of successful transaction 1`] = `
<div
  className="Col"
>
  <div
    className="Detail"
    style={
      Object {
        "color": "#ffffff",
      }
    }
  >
    <div
      className="label"
    >
      Description
    </div>
    <div
      className="value"
    >
      Transaction OK
    </div>
  </div>
</div>
`;

exports[`renders status of failed transaction 1`] = `
<div
  className="TransactionStatusCell"
>
  <img
    alt=""
    src="/assets/ko.svg"
  />
</div>
`;

exports[`renders status of successful transaction 1`] = `
<div
  className="TransactionStatusCell"
>
  <img
    alt=""
    src="/assets/ok.svg"
  />
</div>
`;
